# CP210xRelay

./: .gitignore  CMakeLists.txt  README.md
cad/: relay_card_box.FCStd  relay_card_box.amf  relay_card_lid.amf
lib/: CP210xRuntime.lib  CP210xRuntimeDLL.h  README.md
src/: CP210xRelay.cpp
